--- a/Poc.cabal
+++ b/Poc.cabal
@@ -16,12 +16,12 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Poc
+                     , PocParser
   build-depends:       base >= 4.7 && < 5,
                        containers >= 0.5.7.1,
                        mtl >= 2.2.1,
                        parsec >= 3.1
   default-language:    Haskell2010
-  other-modules:       PocParser
 
 executable Poc-exe
   hs-source-dirs:      app
@@ -38,6 +38,7 @@ test-suite Poc-test
   build-depends:       base
                      , Poc
                      , containers >= 0.5.7.1
+                     , directory >= 1.2.6.2
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
